real important change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <label for="Длительность">Длительность <input id="duration" name="Длительность" type="time" step="1"></label>
             <label for="Дата выхода">Дата выхода<input id="date" name="Дата выхода" type="date"></label>
             <label for="Постер">Постер<input id="poster" name="Постер" type="file" accept=".png, .jpg, .jpeg"></label>
-            <button onclick="addFilm()" type="button">Добавить</button>
+            <button onclick="addFilm()" type="button">+</button>
         </form>
     </div>
 </div>
