--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <label for="Бюджет">Бюджет <input id="budget" name="Бюджет" type="number" min="0"></label>
             <label for="Сборы мировые">Сборы мировые <input id="income" name="Сборы мировые" type="number" min="0"></label>
             <label for="Рейтинг возраста">Рейтинг возраста <input id="rating" name="Рейтинг возраста" type="number" min="0"></label>
-            <label for="Длительность">Длительность <input id="duration" name="Длительность" type="time" step="1"></label>
+            <label for="Длительность">Продолжительность <input id="duration" name="Длительность" type="time" step="1"></label>
             <label for="Дата выхода">Дата выхода<input id="date" name="Дата выхода" type="date"></label>
             <label for="Постер">Постер<input id="poster" name="Постер" type="file" accept=".png, .jpg, .jpeg"></label>
             <button onclick="addFilm()" type="button">+</button>
