--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="checkbox" name="genreCheck">
         </div>
         <div class="filterOption">
-            <label>Страна </label>
+            <label>not funny didn't laugh </label>
             <select id="countryF"></select>
             <input type="checkbox" name="countryCheck">
         </div>
